# dmt-2

./: .gitignore  check_outliers.py  custom_eda.py  eda_script.py  main.py  pyproject.toml  test_country_prices.py  test_full_pipeline.py  test_inf.py  verify_prices.py
configs/: experiment_config.json
src/: .env  baseline.py  best_xgb_params.json  consts.py  diagnostics.py  ensemble_weight_tune.py  expedia_xgb_overnight.db  flaml_tune.py  main.py  pipeline.py  ranker_tune.py  tune.py
src/data/: __init__.py  clean.py  engineer.py  feature_selection.py  features.py  impute.py  load.py  loader.py  preprocessing.py  processing.py  scale.py  split.py  submit.py
src/data/features/: __init__.py  clean.py  competitors.py  date_time.py  distance.py  features.py  ids.py  impute.py  scale.py
src/evaluate/: loss.py
src/evaluation/: metrics.py
src/features/: build_features.py
src/kaggle/: __init__.py
src/kaggle_interaction/: __init__.py  load.py  submit.py  sumbit.py
src/logistics/: __init__.py  logs.py
src/models/: train.py
src/notebooks/: business_understanding.ipynb  eda.ipynb  eda.py  model_selection.ipynb
src/predict/: __init__.py  ceiling.py  cleanup.py  lambdamart.py  random.py  xgboost_ranker.py
src/predict/rankers/: __init__.py  catboost.py  content_based_recommender.py  lambdamart.py  lambdamart_ranker.py  rank_data_preprocessor.py  rank_data_processor.py  xgboost_ranker.py
src/training_split/: __init__.py  split.py
