[project]
name = "dmt-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.1.2",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
    "torch>=2.11.0",
]
