[project]
name = "dmt-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.1.2",
    "kagglehub>=1.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]
